--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,7 @@
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
+Dash = "1b08a953-4be3-4667-9a23-3db579824955"
 DashCoreComponents = "1b08a953-4be3-4667-9a23-9da06441d987"
 DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
 DashTable = "1b08a953-4be3-4667-9a23-f0e2ba4deb9a"
