dcc core componets main examples

--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ Dash = "1b08a953-4be3-4667-9a23-3db579824955"
 DashCoreComponents = "1b08a953-4be3-4667-9a23-9da06441d987"
 DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
 DashTable = "1b08a953-4be3-4667-9a23-f0e2ba4deb9a"
+DashUserGuideComponents = "1b08a953-4be3-4667-9a23-e667f8ac7b1d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
