--- a/Project.toml
+++ b/Project.toml
@@ -2,7 +2,9 @@
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
 Dash = "1b08a953-4be3-4667-9a23-3db579824955"
+DashBio = "1b08a953-4be3-4667-9a23-39d4b6b31131"
 DashCoreComponents = "1b08a953-4be3-4667-9a23-9da06441d987"
+DashDaq = "1b08a953-4be3-4667-9a23-a540cca008f6"
 DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
 DashTable = "1b08a953-4be3-4667-9a23-f0e2ba4deb9a"
 DashUserGuideComponents = "1b08a953-4be3-4667-9a23-e667f8ac7b1d"
