--- a/DashDocs/Project.toml
+++ b/DashDocs/Project.toml
@@ -9,6 +9,7 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
 Dash = "1b08a953-4be3-4667-9a23-3db579824955"
 DashBio = "1b08a953-4be3-4667-9a23-39d4b6b31131"
+DashBioUtils = "adab0d11-1453-4a42-9046-4ba7b121fa95"
 DashCoreComponents = "1b08a953-4be3-4667-9a23-9da06441d987"
 DashDaq = "1b08a953-4be3-4667-9a23-a540cca008f6"
 DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
@@ -17,10 +18,12 @@ DashUserGuideComponents = "1b08a953-4be3-4667-9a23-e667f8ac7b1d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
+StringEncodings = "69024149-9ee7-55f6-a4c4-859efe599b68"
 UrlDownload = "856ac37a-3032-4c1c-9122-f86d88358c8b"
