--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
 DashTable = "1b08a953-4be3-4667-9a23-f0e2ba4deb9a"
 DashUserGuideComponents = "1b08a953-4be3-4667-9a23-e667f8ac7b1d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
@@ -19,6 +20,7 @@ Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 StringEncodings = "69024149-9ee7-55f6-a4c4-859efe599b68"
 UrlDownload = "856ac37a-3032-4c1c-9122-f86d88358c8b"
