--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ DashDocs = "3ff4e7a0-4b43-48cc-8faa-634f7f222ac1"
 DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
 DashTable = "1b08a953-4be3-4667-9a23-f0e2ba4deb9a"
 DashUserGuideComponents = "1b08a953-4be3-4667-9a23-e667f8ac7b1d"
+DashVtk = "1b08a953-4be3-4667-9a23-818b1eccd4c7"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
