--- a/DashDocs/Project.toml
+++ b/DashDocs/Project.toml
@@ -7,15 +7,19 @@ version = "0.1.0"
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Dash = "1b08a953-4be3-4667-9a23-3db579824955"
 DashBio = "1b08a953-4be3-4667-9a23-39d4b6b31131"
 DashBioUtils = "adab0d11-1453-4a42-9046-4ba7b121fa95"
+DashBootstrapComponents = "1b08a953-4be3-4667-9a23-fa6d05876a1e"
 DashCoreComponents = "1b08a953-4be3-4667-9a23-9da06441d987"
 DashDaq = "1b08a953-4be3-4667-9a23-a540cca008f6"
 DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
 DashTable = "1b08a953-4be3-4667-9a23-f0e2ba4deb9a"
 DashUserGuideComponents = "1b08a953-4be3-4667-9a23-e667f8ac7b1d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
@@ -25,5 +29,7 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StringEncodings = "69024149-9ee7-55f6-a4c4-859efe599b68"
 UrlDownload = "856ac37a-3032-4c1c-9122-f86d88358c8b"
