--- a/DashDocs/Project.toml
+++ b/DashDocs/Project.toml
@@ -16,6 +16,7 @@ DashDaq = "1b08a953-4be3-4667-9a23-a540cca008f6"
 DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
 DashTable = "1b08a953-4be3-4667-9a23-f0e2ba4deb9a"
 DashUserGuideComponents = "1b08a953-4be3-4667-9a23-e667f8ac7b1d"
+DashVtk = "1b08a953-4be3-4667-9a23-818b1eccd4c7"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
