--- a/Project.toml
+++ b/Project.toml
@@ -12,12 +12,14 @@ DashDocs = "3ff4e7a0-4b43-48cc-8faa-634f7f222ac1"
 DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
 DashTable = "1b08a953-4be3-4667-9a23-f0e2ba4deb9a"
 DashUserGuideComponents = "1b08a953-4be3-4667-9a23-e667f8ac7b1d"
+DashVtk = "1b08a953-4be3-4667-9a23-818b1eccd4c7"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+JSON2 = "2535ab7d-5cd8-5a07-80ac-9b1792aadce3"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
