--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ DashBio = "1b08a953-4be3-4667-9a23-39d4b6b31131"
 DashBioUtils = "adab0d11-1453-4a42-9046-4ba7b121fa95"
 DashBootstrapComponents = "1b08a953-4be3-4667-9a23-fa6d05876a1e"
 DashCoreComponents = "1b08a953-4be3-4667-9a23-9da06441d987"
+DashCytoscape = "1b08a953-4be3-4667-9a23-85cc21bfd5e9"
 DashDaq = "1b08a953-4be3-4667-9a23-a540cca008f6"
 DashDocs = "3ff4e7a0-4b43-48cc-8faa-634f7f222ac1"
 DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
