--- a/DashDocs/Project.toml
+++ b/DashDocs/Project.toml
@@ -12,6 +12,7 @@ Dash = "1b08a953-4be3-4667-9a23-3db579824955"
 DashBio = "1b08a953-4be3-4667-9a23-39d4b6b31131"
 DashBioUtils = "adab0d11-1453-4a42-9046-4ba7b121fa95"
 DashCoreComponents = "1b08a953-4be3-4667-9a23-9da06441d987"
+DashCytoscape = "1b08a953-4be3-4667-9a23-85cc21bfd5e9"
 DashDaq = "1b08a953-4be3-4667-9a23-a540cca008f6"
 DashHtmlComponents = "1b08a953-4be3-4667-9a23-24100242a84a"
 DashTable = "1b08a953-4be3-4667-9a23-f0e2ba4deb9a"
