--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StringEncodings = "69024149-9ee7-55f6-a4c4-859efe599b68"
 UrlDownload = "856ac37a-3032-4c1c-9122-f86d88358c8b"
